// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CFormInput customize 1`] = `
<div>
  <input
    class="form-control-plaintext form-control-lg form-control-color bazinga"
    disabled=""
    readonly=""
    type="color"
    value="value"
  />
</div>
`;

exports[`loads and displays CFormInput component 1`] = `
<div>
  <input
    class="form-control"
    type="text"
  />
</div>
`;
